# catalog-microservice

./: .env.exemple  .gitignore  Dockerfile  README.md  consumer.py  docker-compose.yml  main.py  procuder.py  pylintrc.txt  pyproject.toml  seed.py
.github/workflows/: workflow.yaml  workflowTestingAndDeploy.yaml  workflowTestingDeploySSh
catalog_microservice/: .env.exemple  app.py  run.py
catalog_microservice/data/interfaces/: category_repository_interface.py  kafka_repository_interface.py  product_repository_interface.py
catalog_microservice/data/tests/: category_register.py  product_finder.py  product_get_all.py  product_get_stock.py  product_register.py
catalog_microservice/data/use_cases/: category_register.py  category_register_test.py  product_finder.py  product_finder_test.py  product_get_all.py  product_get_all_test.py  product_get_stock.py  product_get_stock_test.py  product_register.py  product_register_test.py  product_update_stock.py
catalog_microservice/domain/interfaces/: product_repository_interface.py
catalog_microservice/domain/models/: categories.py  products.py
catalog_microservice/domain/use_cases/: category_register_interface.py  product_finder_interface.py  product_get_all_interface.py  product_get_stock_interface.py  (+2 more)
catalog_microservice/errors/: error_handler.py
catalog_microservice/validators/: category_register_validator.py  product_finder_validator.py  product_finder_validator_test.py  product_register_validator.py  product_register_validator_test.py  products_get_stock.py  products_get_stock_test.py
init/: schema.sql
(+56 files in other folders)
