[tool.poetry]
name = "catalog-microservice"
version = "0.1.0"
description = ""
authors = ["Maxson Almeida <maxsonferovante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
pylint = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
