[tool.poetry]
name = "catalog-microservice"
version = "0.1.0"
description = ""
authors = ["Maxson Almeida <maxsonferovante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
pylint = "^3.2.2"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.1"
pytest = "^8.2.2"
python-dotenv = "^1.0.1"
cryptography = "^42.0.8"
cerberus = "^1.3.5"
faker = "^25.9.1"
faker-commerce = "^1.0.4"
gunicorn = "^22.0.0"
confluent-kafka = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
